--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -27,6 +27,9 @@ jobs:
     strategy:
       matrix:
         node: [ '18.20.3' ]
+    env:
+      DO_NOT_TRACK: 1
+      TURBO_TELEMETRY_DISABLED: 1
     needs: setup
     name: "Build"
     steps:
@@ -76,22 +79,12 @@ jobs:
           NODE_ENV: 'test'
 
       - name: "📊 Publish Test Report"
-        uses: mikepenz/action-junit-report@v4
-        if: always()
+        uses: dorny/test-reporter@v1
+        if: success() || failure()
         with:
-          report_paths: '**/junit.xml'
-
-      - name: "📤 Upload artifact"
-        uses: actions/upload-pages-artifact@v1
-        with:
-          path: ./mochawesome-report
-
-      - name: "🚀 Deploy Report"
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GH_TOKEN }}
-          publish_dir: ./mochawesome-report
-          destination_dir: mochawesome-report
+          name: "Test Report"
+          path: 'packages/**/junit.xml'
+          reporter: jest-junit
 
       - name: "📊 Upload coverage report to Codecov"
         uses: codecov/codecov-action@v4
