--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -26,6 +26,9 @@ jobs:
     strategy:
       matrix:
         node: [ '18.20.3' ]
+    env:
+      DO_NOT_TRACK: 1
+      TURBO_TELEMETRY_DISABLED: 1
     needs: setup
     name: "Build"
     steps:
@@ -75,10 +78,12 @@ jobs:
           NODE_ENV: 'test'
 
       - name: "📊 Publish Test Report"
-        uses: mikepenz/action-junit-report@v4
-        if: always()
+        uses: dorny/test-reporter@v1
+        if: success() || failure()
         with:
-          report_paths: '**/junit.xml'
+          name: "Test Report"
+          path: 'packages/**/junit.xml'
+          reporter: jest-junit
 
       - name: "📊 Upload coverage report to Codecov"
         uses: codecov/codecov-action@v4
