--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -71,9 +71,7 @@ jobs:
         run: yarn build --force && node sonar-args.js
 
       - name: "👨‍💻 Run Test"
-        run: |
-          yarn test --force
-          yarn report
+        run: yarn test --force
         env:
           NODE_ENV: 'test'
 
