chore: add manual dispatch

--- a/.github/workflows/branches.yml
+++ b/.github/workflows/branches.yml
@@ -3,6 +3,7 @@ name: "Branches"
 on:
   push:
     branches: [ "feat/*", "fix/*", "refactor/*", "chore/*", "docs/*", "test/*", "build/*", "perf/*", "style/*", "revert/*" ]
+  workflow_dispatch:
 
 jobs:
   setup:
