--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -17,7 +17,7 @@ jobs:
       TURBO_TELEMETRY_DISABLED: 1
     name: "Build"
     steps:
-      - name: "⚙ Set up Node.js v${{ matrix.node }}"
+      - name: "⚙ Set up NodeJS v${{ matrix.node }}"
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node }}
@@ -64,7 +64,7 @@ jobs:
         uses: dorny/test-reporter@v1
         if: success() || failure()
         with:
-          name: "Test Report"
+          name: "Test Report (${{ matrix.node }})"
           path: 'packages/**/junit.xml'
           reporter: jest-junit
 
