--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,7 +28,7 @@ jobs:
       TURBO_TELEMETRY_DISABLED: 1
     name: "Publish"
     steps:
-      - name: "⚙ Set up Node.js v${{ matrix.node }}"
+      - name: "⚙ Set up NodeJS v${{ matrix.node }}"
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node }}
@@ -75,7 +75,7 @@ jobs:
         uses: dorny/test-reporter@v1
         if: success() || failure()
         with:
-          name: "Test Report"
+          name: "Test Report (${{ matrix.node }})"
           path: 'packages/**/junit.xml'
           reporter: jest-junit
 
