--- a/packages/dynamoose/package.json
+++ b/packages/dynamoose/package.json
@@ -37,7 +37,7 @@
     "directory": "../../dist/dynamoose"
   },
   "peerDependencies": {
-    "@aws-sdk/client-dynamodb": "3.577.0",
+    "@aws-sdk/client-dynamodb": "^3.620.1",
     "@nestjs/common": "^10.3.10",
     "@nestjs/core": "^10.3.10",
     "@nestjs/platform-express": "^10.3.10",
@@ -47,7 +47,7 @@
     "rxjs": "^7.8.1"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "3.577.0",
+    "@aws-sdk/client-dynamodb": "^3.620.1",
     "dynamoose": "^4.0.0",
     "dynamoose-logger": "^4.0.0"
   },
