--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -80,5 +80,6 @@ jobs:
 
       - name: "🦠 Snyk to check for vulnerabilities"
         uses: snyk/actions/node@master
+        continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
