chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "version:prerelease": "lerna version --conventional-commits --no-changelog --conventional-prerelease --no-git-tag-version --preid=beta --yes",
     "version:release": "lerna version --conventional-commits --force-git-tag --create-release github --conventional-graduate --yes",
     "publish:pkgs": "lerna publish from-package --no-verify-access --yes",
-    "postinstall": "husky && lerna bootstrap",
+    "postinstall": "lerna bootstrap",
     "bs": "lerna bootstrap",
     "hoist-deps": "lerna clean -y && lerna bootstrap",
     "plop": "plop",
@@ -62,19 +62,19 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.620.1",
-    "@nestjs/axios": "^3.0.2",
+    "@nestjs/axios": "^3.0.3",
     "@nestjs/class-transformer": "^0.4.0",
     "@nestjs/class-validator": "^0.13.4",
-    "@nestjs/common": "^10.3.10",
+    "@nestjs/common": "^10.4.4",
     "@nestjs/config": "^3.2.3",
-    "@nestjs/core": "^10.3.10",
-    "@nestjs/microservices": "^10.3.10",
-    "@nestjs/platform-express": "^10.3.10",
-    "@nestjs/swagger": "^7.4.0",
+    "@nestjs/core": "^10.4.4",
+    "@nestjs/microservices": "^10.4.4",
+    "@nestjs/platform-express": "^10.4.4",
+    "@nestjs/swagger": "^7.4.2",
     "@nestjs/terminus": "^10.2.3",
     "@nestjs/typeorm": "^10.0.2",
-    "axios": "^1.7.2",
-    "axios-retry": "^4.4.2",
+    "axios": "^1.7.7",
+    "axios-retry": "^4.5.0",
     "camunda-external-task-client-js": "^2.3.1",
     "class-transformer": "^0.5.1",
     "cross-env": "^7.0.3",
@@ -82,36 +82,36 @@
     "dynamoose-logger": "^4.0.0",
     "fast-redact": "^3.5.0",
     "lodash": "^4.17.21",
-    "luxon": "^3.4.4",
+    "luxon": "^3.5.0",
     "minimatch": "^9.0.5",
-    "mongodb": "^6.8.0",
+    "mongodb": "^6.9.0",
     "mysql": "^2.18.1",
-    "mysql2": "^3.11.0",
-    "pg": "^8.12.0",
+    "mysql2": "^3.11.3",
+    "pg": "^8.13.0",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "testcontainers": "^10.11.0",
+    "testcontainers": "^10.13.1",
     "typeorm": "^0.3.20",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@automock/jest": "^2.1.0",
     "@babel/core": "^7.24.9",
-    "@babel/parser": "^7.25.0",
+    "@babel/parser": "^7.25.6",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-decorators": "^7.24.7",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@babel/plugin-syntax-decorators": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
-    "@babel/traverse": "^7.25.1",
+    "@babel/traverse": "^7.25.6",
     "@commitlint/cli": "^17.8.1",
     "@commitlint/config-conventional": "^17.8.1",
     "@elastic/elasticsearch-mock": "^2.0.0",
-    "@nestjs/cli": "^10.4.2",
-    "@nestjs/schematics": "^10.1.3",
-    "@nestjs/testing": "^10.3.10",
+    "@nestjs/cli": "^10.4.5",
+    "@nestjs/schematics": "^10.1.4",
+    "@nestjs/testing": "^10.4.4",
     "@pika/cli": "^0.2.0",
     "@pika/pack": "^0.5.0",
     "@pika/plugin-build-node": "^0.9.2",
@@ -128,13 +128,13 @@
     "@types/fast-redact": "^3.0.4",
     "@types/glob": "^8.1.0",
     "@types/inline-css": "^3.0.3",
-    "@types/jest": "^29.5.12",
-    "@types/lodash": "^4.17.7",
+    "@types/jest": "^29.5.13",
+    "@types/lodash": "^4.17.9",
     "@types/luxon": "^3.4.2",
-    "@types/mocha": "^10.0.7",
+    "@types/mocha": "^10.0.8",
     "@types/mochawesome": "^6.2.4",
-    "@types/node": "^22.0.0",
-    "@types/nodemailer": "^6.4.15",
+    "@types/node": "^22.6.1",
+    "@types/nodemailer": "^6.4.16",
     "@types/pug": "^2.0.10",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
@@ -143,30 +143,30 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "husky": "^9.1.4",
+    "husky": "^9.1.6",
     "jest": "^29.7.0",
     "jest-extended": "^4.0.2",
     "jest-junit": "^16.0.0",
     "jest-mock-extended": "^3.0.7",
     "jest-sonar-reporter": "^2.0.0",
     "lerna": "^4.0.0",
-    "lint-staged": "^15.2.7",
-    "mocha": "^10.7.0",
+    "lint-staged": "^15.2.10",
+    "mocha": "^10.7.3",
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.3.0",
     "mochawesome-report-generator": "^6.2.0",
-    "nock": "^13.5.4",
+    "nock": "^13.5.5",
     "nodemailer-mock": "^2.0.6",
     "plop": "^4.0.1",
     "prettier": "^3.3.3",
-    "rimraf": "^5.0.9",
+    "rimraf": "^5.0.10",
     "supertest": "^7.0.0",
-    "testcontainers": "^10.11.0",
-    "ts-jest": "^29.2.3",
+    "testcontainers": "^10.13.1",
+    "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "turbo": "^2.0.9",
+    "turbo": "^2.1.2",
     "typescript": "^4.9.5"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
