--- a/packages/tracing/package.json
+++ b/packages/tracing/package.json
@@ -36,36 +36,36 @@
     "directory": "../../dist/tracing"
   },
   "peerDependencies": {
-    "@nestjs/common": "^10.3.10",
-    "@nestjs/core": "^10.3.10",
-    "@nestjs/platform-express": "^10.3.10",
-    "@opentelemetry/core": "1.25.1",
-    "@opentelemetry/exporter-trace-otlp-proto": "0.52.1",
+    "@nestjs/common": "^10.4.4",
+    "@nestjs/core": "^10.4.4",
+    "@nestjs/platform-express": "^10.4.4",
+    "@opentelemetry/core": "^1.26.0",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.53.0",
     "@opentelemetry/id-generator-aws-xray": "1.2.2",
-    "@opentelemetry/instrumentation-http": "0.52.1",
-    "@opentelemetry/propagator-aws-xray": "1.25.1",
-    "@opentelemetry/propagator-b3": "1.25.1",
-    "@opentelemetry/propagator-jaeger": "1.25.1",
-    "@opentelemetry/resources": "1.25.1",
-    "@opentelemetry/sdk-node": "0.52.1",
-    "@opentelemetry/sdk-trace-base": "1.25.1",
-    "@opentelemetry/semantic-conventions": "1.25.1",
+    "@opentelemetry/instrumentation-http": "^0.53.0",
+    "@opentelemetry/propagator-aws-xray": "^1.26.0",
+    "@opentelemetry/propagator-b3": "^1.26.0",
+    "@opentelemetry/propagator-jaeger": "^1.26.0",
+    "@opentelemetry/resources": "^1.26.0",
+    "@opentelemetry/sdk-node": "^0.53.0",
+    "@opentelemetry/sdk-trace-base": "^1.26.0",
+    "@opentelemetry/semantic-conventions": "^1.27.0",
     "minimatch": "^9.0.5",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
   "dependencies": {
-    "@opentelemetry/core": "1.25.1",
-    "@opentelemetry/exporter-trace-otlp-proto": "0.52.1",
+    "@opentelemetry/core": "^1.26.0",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.53.0",
     "@opentelemetry/id-generator-aws-xray": "1.2.2",
-    "@opentelemetry/instrumentation-http": "0.52.1",
-    "@opentelemetry/propagator-aws-xray": "1.25.1",
-    "@opentelemetry/propagator-b3": "1.25.1",
-    "@opentelemetry/propagator-jaeger": "1.25.1",
-    "@opentelemetry/resources": "1.25.1",
-    "@opentelemetry/sdk-node": "0.52.1",
-    "@opentelemetry/sdk-trace-base": "1.25.1",
-    "@opentelemetry/semantic-conventions": "1.25.1",
+    "@opentelemetry/instrumentation-http": "^0.53.0",
+    "@opentelemetry/propagator-aws-xray": "^1.26.0",
+    "@opentelemetry/propagator-b3": "^1.26.0",
+    "@opentelemetry/propagator-jaeger": "^1.26.0",
+    "@opentelemetry/resources": "^1.26.0",
+    "@opentelemetry/sdk-node": "^0.53.0",
+    "@opentelemetry/sdk-trace-base": "^1.26.0",
+    "@opentelemetry/semantic-conventions": "^1.27.0",
     "@tresdoce-nestjs-toolkit/utils": "^1.2.2",
     "minimatch": "^9.0.5"
   },
