--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "@nestjs/core": "^10.4.4",
     "@nestjs/microservices": "^10.4.4",
     "@nestjs/platform-express": "^10.4.4",
-    "@nestjs/swagger": "^7.4.2",
+    "@nestjs/swagger": "^8.0.0",
     "@nestjs/terminus": "^10.2.3",
     "@nestjs/typeorm": "^10.0.2",
     "axios": "^1.7.7",
@@ -93,7 +93,7 @@
     "rxjs": "^7.8.1",
     "testcontainers": "^10.13.1",
     "typeorm": "^0.3.20",
-    "uuid": "^10.0.0"
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
     "@automock/jest": "^2.1.0",
@@ -124,7 +124,7 @@
     "@types/cookie-signature": "^1.1.2",
     "@types/ejs": "^3.1.5",
     "@types/elasticsearch": "^5.0.43",
-    "@types/express": "^4.17.21",
+    "@types/express": "^5.0.0",
     "@types/fast-redact": "^3.0.4",
     "@types/glob": "^8.1.0",
     "@types/inline-css": "^3.0.3",
@@ -166,7 +166,7 @@
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "turbo": "^2.1.2",
+    "turbo": "2.1.2",
     "typescript": "^4.9.5"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
