--- a/packages/paas/package.json
+++ b/packages/paas/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "prebuild": "rimraf ../../dist/paas",
     "build": "pika build --out ../../dist/paas",
-    "test": "echo \"Error: no test specified\"",
+    "test": "jest --runInBand --coverage --forceExit --passWithNoTests",
     "clean": "rimraf .turbo coverage test-results reports node_modules test-report.xml junit.xml"
   },
   "publishConfig": {
