--- a/packages/tresdoce-types/package.json
+++ b/packages/tresdoce-types/package.json
@@ -8,7 +8,7 @@
     "jest-extended": "^4.0.2"
   },
   "scripts": {
-    "test": "jest --runInBand --coverage --forceExit --passWithNoTests",
+    "test": "echo \"Error: no test specified\"",
     "clean": "rimraf .turbo coverage test-results reports node_modules test-report.xml junit.xml"
   },
   "private": true
