--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,7 @@
     "@typescript-eslint/no-empty-function": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/no-require-imports": "off",
+    "@typescript-eslint/no-unsafe-function-type": "off",
     "prefer-const": "off"
   }
 }
