--- a/packages/aws-sqs/package.json
+++ b/packages/aws-sqs/package.json
@@ -29,18 +29,22 @@
     "prebuild": "rimraf ../../dist/aws-sqs",
     "build": "pika build --out ../../dist/aws-sqs",
     "test": "jest --runInBand --coverage --forceExit",
-    "clean": "rimraf .turbo coverage test-results reports node_modules test-report.xml junit.xml"
+    "clean": "rimraf .turbo coverage test-results reports node_modules test-report.xml junit.xml debug.json"
   },
   "publishConfig": {
     "access": "public",
     "directory": "../../dist/aws-sqs"
   },
   "peerDependencies": {
+    "@aws-sdk/client-sqs": "^3.682.0",
     "@nestjs/common": "^10.4.6",
     "@nestjs/core": "^10.4.6",
     "@nestjs/platform-express": "^10.4.6",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
+  },
+  "dependencies": {
+    "@aws-sdk/client-sqs": "^3.682.0"
   },
   "devDependencies": {
     "@tresdoce-nestjs-toolkit/config": "^0.4.0",
