--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -4,6 +4,6 @@
   "version": "0.4.0",
   "scripts": {
     "test": "echo \"Error: no test specified\"",
-    "clean": "rimraf .turbo coverage test-results reports node_modules test-report.xml junit.xml"
+    "clean": "rimraf .turbo coverage test-results reports node_modules test-report.xml junit.xml debug.json"
   }
 }
