--- a/packages/rate-limit/package.json
+++ b/packages/rate-limit/package.json
@@ -39,8 +39,12 @@
     "@nestjs/common": "^10.4.6",
     "@nestjs/core": "^10.4.6",
     "@nestjs/platform-express": "^10.4.6",
+    "@nestjs/throttler": "^6.2.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
+  },
+  "dependencies": {
+    "@nestjs/throttler": "^6.2.1"
   },
   "devDependencies": {
     "@tresdoce-nestjs-toolkit/config": "^0.4.1-beta.2",
