--- a/packages/paas/package.json
+++ b/packages/paas/package.json
@@ -47,6 +47,7 @@
     "@tresdoce-nestjs-toolkit/core": "^1.4.3",
     "@tresdoce-nestjs-toolkit/filters": "^1.1.4",
     "@tresdoce-nestjs-toolkit/health": "^1.1.4",
+    "@tresdoce-nestjs-toolkit/rate-limit": "^0.0.0",
     "@tresdoce-nestjs-toolkit/response-parser": "^1.2.4",
     "@tresdoce-nestjs-toolkit/tracing": "^1.2.4",
     "@tresdoce-nestjs-toolkit/utils": "^1.2.4"
