--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,7 @@
 {
+  "$schema": "https://json.schemastore.org/lerna",
   "packages": ["packages/*"],
   "version": "independent",
-  "useWorkspaces": true,
   "npmClient": "yarn",
   "command": {
     "version": {
