style: remove cache build

--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,7 @@
     "build": {
       "dependsOn": ["^build"],
       "outputs": ["dist/**"],
-      "cache": true
+      "cache": false
     },
     "test": {
       "outputs": ["coverage/**", "test-report.xml", "junit.xml"],
