--- a/packages/qrcode/package.json
+++ b/packages/qrcode/package.json
@@ -8,7 +8,7 @@
     "url": "https://rudemex.github.io/"
   },
   "directories": {
-    "lib": "lib",
+    "src": "src",
     "test": "__tests__"
   },
   "keywords": [
