--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -4,6 +4,7 @@
   "version": "0.5.0",
   "scripts": {
     "tests": "echo \"Error: no test specified\"",
+    "prepare": "yarn build",
     "clean": "rimraf .turbo coverage test-results reports node_modules test-report.xml junit.xml debug.json"
   }
 }
