--- a/packages/tresdoce-types/package.json
+++ b/packages/tresdoce-types/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "tests": "echo \"Error: no test specified\"",
+    "prepare": "yarn build",
     "clean": "rimraf .turbo coverage test-results reports node_modules test-report.xml junit.xml debug.json"
   },
   "private": true
