style: fix versioning and package

--- a/lerna.json
+++ b/lerna.json
@@ -27,6 +27,7 @@
       }
     },
     "publish": {
+      "prepublish": "yarn pack",
       "conventionalCommits": true,
       "allowBranch": ["master"],
       "includeMergedTags": true,
