--- a/packages/filters/package.json
+++ b/packages/filters/package.json
@@ -29,7 +29,7 @@
     "prebuild": "rimraf ../../dist/filters",
     "build": "pika build --out ../../dist/filters",
     "test": "jest --runInBand --coverage --forceExit",
-    "prepare": "yarn build",
+    "pack": "yarn pack",
     "clean": "rimraf .turbo coverage test-results reports node_modules test-report.xml junit.xml debug.json"
   },
   "publishConfig": {
