--- a/packages/paas/package.json
+++ b/packages/paas/package.json
@@ -30,7 +30,7 @@
     "prebuild": "rimraf ../../dist/paas",
     "build": "pika build --out ../../dist/paas",
     "test": "jest --runInBand --coverage --forceExit --passWithNoTests",
-    "prepare": "yarn build",
+    "pack": "yarn pack",
     "clean": "rimraf .turbo coverage test-results reports node_modules test-report.xml junit.xml debug.json"
   },
   "publishConfig": {
