--- a/packages/archetype/package.json
+++ b/packages/archetype/package.json
@@ -15,10 +15,9 @@
     "dist-node/",
     "dist-src/",
     "dist-types/",
-    "CHANGELOG.md",
+    "README.md",
     "LICENSE.md",
-    "package.json",
-    "README.md"
+    "CHANGELOG.md"
   ],
   "keywords": [
     "nestjs",
