--- a/packages/redis/package.json
+++ b/packages/redis/package.json
@@ -76,6 +76,16 @@
             "**/__test__/*"
           ]
         }
+      ],
+      [
+        "pika-plugin-package.json",
+        {
+          "*files": [
+            "-bin/",
+            "-dist-*/",
+            "+dist-*/*"
+          ]
+        }
       ]
     ]
   }
