--- a/package.json
+++ b/package.json
@@ -155,6 +155,8 @@
     "mochawesome-report-generator": "^6.2.0",
     "nock": "^13.5.6",
     "nodemailer-mock": "^2.0.6",
+    "pika-plugin-add-properties": "^1.0.2",
+    "pika-plugin-package.json": "^1.0.2",
     "plop": "^4.0.1",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
