--- a/packages/typeorm/package.json
+++ b/packages/typeorm/package.json
@@ -84,6 +84,16 @@
             "**/__test__/*"
           ]
         }
+      ],
+      [
+        "pika-plugin-package.json",
+        {
+          "*files": [
+            "-bin/",
+            "-dist-*/",
+            "+dist-*/*"
+          ]
+        }
       ]
     ]
   }
