fix: resolve files to pack

--- a/packages/redis/package.json
+++ b/packages/redis/package.json
@@ -83,7 +83,11 @@
           "*files": [
             "-bin/",
             "-dist-*/",
-            "+dist-*/*"
+            "+dist-*/*",
+            "+CHANGELOG.md",
+            "+LICENSE.md",
+            "+package.json",
+            "+README.md"
           ]
         }
       ]
