--- a/packages/aws-sqs/package.json
+++ b/packages/aws-sqs/package.json
@@ -81,7 +81,11 @@
           "*files": [
             "-bin/",
             "-dist-*/",
-            "+dist-*/*"
+            "+dist-*/*",
+            "+CHANGELOG.md",
+            "+LICENSE.md",
+            "+package.json",
+            "+README.md"
           ]
         }
       ]
