--- a/packages/commons/package.json
+++ b/packages/commons/package.json
@@ -96,7 +96,11 @@
           "*files": [
             "-bin/",
             "-dist-*/",
-            "+dist-*/*"
+            "+dist-*/*",
+            "+CHANGELOG.md",
+            "+LICENSE.md",
+            "+package.json",
+            "+README.md"
           ]
         }
       ]
