--- a/packages/response-parser/package.json
+++ b/packages/response-parser/package.json
@@ -80,7 +80,11 @@
           "*files": [
             "-bin/",
             "-dist-*/",
-            "+dist-*/*"
+            "+dist-*/*",
+            "+CHANGELOG.md",
+            "+LICENSE.md",
+            "+package.json",
+            "+README.md"
           ]
         }
       ]
