--- a/packages/dynamoose/package.json
+++ b/packages/dynamoose/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "prebuild": "rimraf ../../dist/dynamoose",
     "build": "pika build --out ../../dist/dynamoose",
-    "test": "jest --runInBand --coverage --forceExit --passWithNoTests",
+    "test": "jest --runInBand --coverage --forceExit",
     "clean": "rimraf .turbo coverage test-results reports node_modules test-report.xml junit.xml debug.json"
   },
   "publishConfig": {
