chore: edit testcontainers

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test": "turbo run test --concurrency=1",
     "clean": "turbo run clean --concurrency=1",
     "preclean": "lerna clean -y",
-    "postclean": "rimraf ./yarn.lock ./package-lock.json ./dist ./.turbo ./mochawesome-report ./mochawesome.json ./node_modules",
+    "postclean": "rimraf ./yarn.lock ./package-lock.json ./dist ./.turbo ./node_modules",
     "lint": "lint-staged",
     "prepublishOnly": "yarn build",
     "format": "prettier --write \"packages/**/*.{ts,tsx,js,jsx,md,json}\"",
@@ -82,7 +82,7 @@
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
-    "testcontainers": "^10.18.0",
+    "testcontainers": "10.16.0",
     "typeorm": "^0.3.20",
     "uuid": "^11.1.0"
   },
@@ -123,7 +123,6 @@
     "@types/lodash": "^4.17.15",
     "@types/luxon": "^3.4.2",
     "@types/mocha": "^10.0.10",
-    "@types/mochawesome": "^6.2.4",
     "@types/node": "^22.13.5",
     "@types/nodemailer": "^6.4.17",
     "@types/pug": "^2.0.10",
@@ -151,7 +150,7 @@
     "prettier": "^3.5.2",
     "rimraf": "^6.0.1",
     "supertest": "^7.0.0",
-    "testcontainers": "^10.18.0",
+    "testcontainers": "10.16.0",
     "ts-jest": "^29.2.6",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
